# rlbench_test

./: README.md  README_RLBENCH.md  apt-packages.txt  debug_egl.py  install_coppeliasim.sh  mp_rlbench_env_test.py  pyproject.toml  reinstall_rlbench.sh  requirements-all.txt  requirements-rlbench.txt  requirements.txt  rl_vec_env.py  rlbench_vec_env.py  setup_remote.sh
scripts/: install_coppeliasim.sh  reinstall_rlbench.sh  setup_remote.sh
