[project]
name = "rlbench-vec-env"
version = "0.0.0"
description = "Optimized RLBench vector environment wrapper scripts"
readme = "README_RLBENCH.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23,<2.0",
  "gymnasium>=0.29.0",
  "opencv-python-headless>=4.8.0,<4.12",
]

[project.optional-dependencies]
# Installs RLBench + PyRep directly from GitHub.
# Still requires you to install CoppeliaSim + set env vars first.
rlbench = [
  "pyrep @ git+https://github.com/stepjam/PyRep.git",
  "rlbench @ git+https://github.com/stepjam/RLBench.git",
]
